--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -25,7 +25,7 @@ httptools = "^0.6.0"
 requests = "2.31.0"
 notebook = "7.0.6"
 openai = "0.28.0"
-
+motor = "3.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
